# learning-rust

./: .gitignore
bin_search_game/: Cargo.toml
bin_search_game/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: hello-world  hello-world.rs
segmented-sieve/: Cargo.toml
segmented-sieve/src/: lib.rs  main.rs
