[package]
name = "concurrent-sieve"
version = "0.1.0"
authors = ["imgomez0127 <ianm0127@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "concurrent_sieve"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
